force-app/main/default/objects/Aeroporto__c/Aeroporto__c.object-meta.xml
<CustomObject>
    <description>Aeroportos Jit</description>
    <label>Aeroporto</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aeroportos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>