force-app/main/default/objects/Aeroporto__c/fields/IATA__c.field-meta.xml
<CustomField>
    <fullName>IATA__c</fullName>
    <description>CÓDIGO IATA DO AEROPORTO</description>
    <inlineHelpText>Os aeroportos são identificados por um código de 3 letras chamado IATA (por
exemplo, o código do aeroporto de Barcelona é BCN)</inlineHelpText>
    <label>IATA</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>