force-app/main/default/objects/Aeroporto__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Latitude do aeroporto</description>
    <inlineHelpText>Latitude: o intervalo válido para valores de latitude é de +90 a -90 graus</inlineHelpText>
    <label>Latitude</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>