force-app/main/default/objects/Aeroporto__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Longitude do aeroporto</description>
    <inlineHelpText>Longitude: o intervalo válido para valores de longitude é de +180 a -180 graus.</inlineHelpText>
    <label>Longitude</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>