force-app/main/default/objects/Aeroporto__c/validationRules/Validar_IATA.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_IATA</fullName>
    <active>false</active>
    <errorConditionFormula>!ISBLANK( IATA__c )</errorConditionFormula>
    <errorMessage>O código IATA está em branco, houve um erro ao processar..</errorMessage>
</ValidationRule>