force-app/main/default/objects/Aeroporto__c/validationRules/Validar_Latitude.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Latitude</fullName>
    <active>true</active>
    <description>Validar valores inseridos na latitude</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Latitude__c)),
    OR(
        Latitude__c &gt; 90,
        Latitude__c &lt; -90
    )
)</errorConditionFormula>
    <errorDisplayField>Latitude__c</errorDisplayField>
    <errorMessage>Latitude: o intervalo válido para valores de latitude é de +90 a -90 graus.</errorMessage>
</ValidationRule>